Criação da estrutura de pastas e dos primeiros scripts terraform, providers, resource group e vnet definidos

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-# MyAWS #
+#Azure subscription
+terraform.tf
+
+# MyAzure #
 /Python/global_templates/global/static/global/images/
 /Python/MyAWS/local_settings.py
 
